# frappe_library

./: .Dockerfile  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  procfile  pyproject.toml  requirements.txt
frappe_library/: main.py
frappe_library/api/: endpoints.py  router.py  schema.py
frappe_library/services/: constants.py
frappe_library/services/custom_commands/: __init__.py  db_commands.py
frappe_library/services/database/: connections.py  manager.py
frappe_library/services/database/models/: __init__.py  book.py  issue_history.py  member.py
src/backend/: Makefile  pyproject.toml
src/backend/frappe_library/: main.py  test.py
src/backend/frappe_library/services/: constants.py  custom_json_encoder.py  logger.py
src/backend/frappe_library/services/api/: endpoints.py  router.py  schema.py  utils.py
src/backend/frappe_library/services/custom_commands/: __init__.py  db_commands.py
src/backend/frappe_library/services/database/: connections.py  manager.py
src/backend/frappe_library/services/database/models/: __init__.py  base.py  book.py  issue_history.py  member.py  rent_history.py  test.py
src/frontend/frappe_library/app/: page.tsx  types.ts
src/frontend/frappe_library/app/books/: page.tsx
src/frontend/frappe_library/app/books/search-book/: page.tsx
src/frontend/frappe_library/app/components/: AvailableBooks.tsx  IssueBook.tsx  IssuedBooks.tsx  MembersList.tsx  Navbar.tsx  RegisterMember.tsx  SearchBook.tsx
src/frontend/frappe_library/app/member/register-member/: page.tsx
src/frontend/frappe_library/app/styles/: AvailableBooks.module.css  ImportBooks.module.css  MembersList.module.css  RegisterMember.module.css  SearchBook.module.css  globals.css
